--- a/glide.yaml
+++ b/glide.yaml
@@ -5,3 +5,4 @@ import:
 - package: github.com/spf13/viper
 - package: github.com/tidwall/gjson
 - package: github.com/tidwall/pretty
+- package: github.com/stretchr/testify/assert
