Add k8s deployment files

--- a/deployment/local/Dockerfile
+++ b/deployment/local/Dockerfile
@@ -1,11 +1,7 @@
 FROM golang:1.13-alpine
+
 WORKDIR /go/src/kiren-backend-go
-
-COPY vendor vendor
-COPY main.go main.go
-COPY internal internal
-COPY configs configs
-COPY data data
-
+COPY . .
 RUN go build -o app .
+
 CMD ["/go/src/kiren-backend-go/app"]
