--- a/deployment/local/docker-compose.yml
+++ b/deployment/local/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     ports:
       - ${KIREN_LOCALHOST_PORT:-8080}:8080
     environment:
-      SERVER_PORT: 8080
+      APP_PORT: 8080
+      APP_ENV: local
 
 networks:
   kiren:
