--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,7 @@ import:
 - package: github.com/tidwall/gjson
 - package: github.com/tidwall/pretty
 - package: github.com/stretchr/testify/assert
+- package: github.com/aws/aws-sdk-go/aws
+- package: github.com/aws/aws-sdk-go/aws/session
+- package: github.com/aws/aws-sdk-go/service/s3
+- package: github.com/aws/aws-sdk-go/service/s3/s3manager
