--- a/glide.yaml
+++ b/glide.yaml
@@ -10,3 +10,4 @@ import:
 - package: github.com/aws/aws-sdk-go/aws/session
 - package: github.com/aws/aws-sdk-go/service/s3
 - package: github.com/aws/aws-sdk-go/service/s3/s3manager
+- package: github.com/go-sql-driver/mysql
