--- a/glide.yaml
+++ b/glide.yaml
@@ -11,3 +11,5 @@ import:
 - package: github.com/aws/aws-sdk-go/service/s3
 - package: github.com/aws/aws-sdk-go/service/s3/s3manager
 - package: github.com/go-sql-driver/mysql
+- package: github.com/aws/aws-lambda-go/events
+- package: github.com/aws/aws-lambda-go/lambda
