--- a/serverless.yml.template
+++ b/serverless.yml.template
@@ -3,7 +3,7 @@ frameworkVersion: ">=1.28.0 <2.0.0"
 provider:
   name: aws
   runtime: go1.x
-  stage: staging
+  stage: ${SERVERLESS_STAGE}
   region: ap-southeast-1
   environment:
     MYSQL_DB_NAME: ${MYSQL_DB_NAME}
