--- a/deployment/local/docker-compose.yml
+++ b/deployment/local/docker-compose.yml
@@ -9,10 +9,20 @@ services:
     networks:
       - kiren
     ports:
-      - ${KIREN_LOCALHOST_PORT:-8080}:8080
+      - ${KIREN_API_PORT:-8080}:8080
     environment:
       APP_PORT: 8080
       APP_ENV: local
+  mysql:
+    container_name: kiren-mysql
+    image: mysql
+    restart: always
+    networks:
+      - kiren
+    ports:
+      - ${KIREN_MYSQL_PORT:-3306}:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: password
 
 networks:
   kiren:
