Add initial data to MySQL

--- a/deployment/local/docker-compose.yml
+++ b/deployment/local/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - ${KIREN_MYSQL_PORT:-3306}:3306
     environment:
       MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./mysql:/docker-entrypoint-initdb.d
 
 networks:
   kiren:
